Fix charts off-center in single column

--- a/src/components/Analytics/AnalyticsChart/AnalyticsChart.css
+++ b/src/components/Analytics/AnalyticsChart/AnalyticsChart.css
@@ -1,3 +1,7 @@
+.recharts-wrapper {
+  margin: 0 auto;
+}
+
 .AnalyticsChart__header {
   text-align: center;
 }
